<resources>
    <string name="app_name">eCommerceMobileApp</string>
    <string name="size_7uk">Size: 7UK</string>
    <string name="nike_sneakers">Nike Sneakers</string>
    <string name="vision_alta_men_s_shoes_size_all_colours">Vision Alta Men’s Shoes Size (All Colours)</string>
    <string name="_2_999">₹2,999</string>
    <string name="_1_500">₹1,500</string>
    <string name="_50_off">50% Off</string>
    <string name="product_details">Product Details</string>
    <string name="nearest_store">Nearest Store</string>
    <string name="vip">VIP</string>
    <string name="return_policy">Return policy</string>
    <string name="example_product_description">Perhaps the most iconic sneaker of all-time, this original Chicago? colorway is the cornerstone to any sneaker collection. Made famous in 1985 by Michael Jordan, the shoe has stood the test of time, becoming the most famous colorway of the Air Jordan 1. This 2015 release saw the ...More</string>
    <string name="delivery_in">Delivery in</string>
    <string name="_1_within_hour">1 within Hour</string>
    <string name="view_similar">View Similar</string>
    <string name="add_to_compare">Add to Compare</string>
    <string name="_10_uk">10 UK</string>
    <string name="search_any_product">Search any Product..</string>
    <string name="_52_082_items">52,082+ Items</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="black_jacket">Black Jacket</string>
    <string name="this_warm_and_comfortable_jacket_is_great_for_learning">This warm and comfortable jacket is great for learning</string>
    <string name="_499">₹499</string>
    <string name="_1234">1234</string>
    <string name="all_featured">All Featured</string>
    <string name="deal_of_the_day">Deal of the Day</string>
    <string name="_22h_55m_20s_remaining">22h 55m 20s remaining</string>
    <string name="view_all">View all</string>
    <string name="special_offers">Special Offers</string>
    <string name="we_make_sure_you_get_the_offer_you_need_at_best_prices">We make sure you get the offer you need at best prices</string>
    <string name="trending_products">Trending Products</string>
    <string name="last_date_29_02_22">Last Date 29/02/22</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create An Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="i_already_have_an_account">I Already Have an Account</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="we_will_send_you_a_message_to_set_or_reset_your_new_password">* We will send you a message to set or reset your new password</string>
    <string name="submit">Submit</string>
    <string name="profile">Profile</string>
    <string name="personal_details">Personal Details</string>
    <string name="email_address">Email Address</string>
</resources>