<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_F5F5F5"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:textSize="@dimen/_36sdp"
        android:fontFamily="@font/montserrat_bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email_address"
        android:layout_marginTop="@dimen/_10sdp"
        app:hintEnabled="true"
        app:startIconDrawable="@drawable/email"
        app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
        app:boxCornerRadiusBottomStart="@dimen/_10sdp"
        app:boxCornerRadiusTopEnd="@dimen/_10sdp"
        app:boxCornerRadiusTopStart="@dimen/_10sdp"
        app:boxBackgroundColor="@color/white_F3F3F3"
        app:boxStrokeColor="@color/grey_A8A8A9">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:importantForAutofill="no"
            android:textSize="@dimen/_12ssp"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="@dimen/_10sdp"
        app:hintEnabled="true"
        app:startIconDrawable="@drawable/lock"
        app:endIconMode="password_toggle"
        app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
        app:boxCornerRadiusBottomStart="@dimen/_10sdp"
        app:boxCornerRadiusTopEnd="@dimen/_10sdp"
        app:boxCornerRadiusTopStart="@dimen/_10sdp"
        app:boxBackgroundColor="@color/white_F3F3F3"
        app:boxStrokeColor="@color/grey_A8A8A9">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="@dimen/_12ssp"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_marginTop="@dimen/_10sdp"
        app:hintEnabled="true"
        app:startIconDrawable="@drawable/lock"
        app:endIconMode="password_toggle"
        app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
        app:boxCornerRadiusBottomStart="@dimen/_10sdp"
        app:boxCornerRadiusTopEnd="@dimen/_10sdp"
        app:boxCornerRadiusTopStart="@dimen/_10sdp"
        app:boxBackgroundColor="@color/white_F3F3F3"
        app:boxStrokeColor="@color/grey_A8A8A9">

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="@dimen/_12ssp"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/round_login_btn"
        android:layout_marginTop="@dimen/_20sdp"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:fontFamily="@font/montserrat_semi_bold"
            android:textSize="@dimen/_20ssp"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_already_have_an_account"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/grey_575757"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="@font/montserrat_semi_bold"
            android:textSize="@dimen/_14ssp"
            android:layout_marginStart="@dimen/_5sdp"
            android:textColor="@color/red_F83758"/>

    </LinearLayout>

</LinearLayout>