<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/jacket" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_16ssp"
            android:text="@string/black_jacket"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_semi_bold"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true" />

        <TextView
            android:id="@+id/txt_product_secondary_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/this_warm_and_comfortable_jacket_is_great_for_learning"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true" />

        <TextView
            android:id="@+id/txt_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:textSize="@dimen/_12ssp"
            android:text="@string/_499"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RatingBar
                android:id="@+id/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="3.5"
                android:stepSize="0.5" />

            <TextView
                android:id="@+id/txt_rating_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1234"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="@dimen/_10ssp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_8sdp" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
